# docs/swagger.yaml
@@ -263,4 +263,23 @@ paths:
       summary: Update user with new dat
       tags:
       - user
+  /user/me:
+    get:
+      description: Fetches the currently logged-in user's data based on the JWT token
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Get logged-in user data
+      tags:
+      - user
 swagger: "2.0"
